# ceres_solver_practice

./: .gitignore  CMakeLists.txt
config/: config.yaml
include/: bal_problem.h  helper_functions.h  image_source_manager.h  pose_graph_3d_error_term.h  reprojection_error_with_quaternion.h  types.h  types_customized.h
include/SLAM/: frame.h  frame_database.h  key_frame.h  key_frame_database.h  map.h  map_point.h  optimizer.h  slam_system.h  tracker.h
src/SLAM/: slam_system.cpp  tracker.cpp
test/: main_test_ceres_hello.cpp  main_test_naive.cpp  main_test_naive2.cpp  main_test_naive3.cpp  main_test_pose_graph.cpp  main_test_rgbd_BA.cpp  main_test_solve_AXXB.cpp  main_test_solve_AXYB.cpp
